@@ -411,6 +411,11 @@ public class StressProfile implements Serializable
                             {
                                 case SET:
                                 case LIST:
+                                    if (c.getType().isFrozen())
+                                    {
+                                        sb.append("?");
+                                        break;
+                                    }
                                 case COUNTER:
                                     sb.append(c.getName()).append(" + ?");
                                     break;
