@@ -1,4 +1,5 @@
 3.0.19
+ * cassandra-stress works with frozen collections: list and set (CASSANDRA-14907)
  * Fix handling FS errors on writing and reading flat files - LogTransaction and hints (CASSANDRA-15053)
  * Avoid double closing the iterator to avoid overcounting the number of requests (CASSANDRA-15058)
  * Improve `nodetool status -r` speed (CASSANDRA-14847)
